--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -2198,17 +2198,20 @@ Footer Style
 */
 
 footer {
-  background-image: url(../images/footer-bg.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 130px;
+     /* background-image: url(../images/footer-bg.jpg); */
+    /* background-position: center center; */
+    /* background-repeat: no-repeat; */
+    background-size: cover;
+    margin-top: 130px;
+    background-color: white;
+    color: black;
+    box-shadow: 0px 5px 8px rgba(0,0,0,0.03);
 }
 
 footer p {
   text-align: center;
   margin: 20px 0px;
-  color: #fff;
+  color: black;
 }
 
 footer p a {
