--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -2203,15 +2203,16 @@ footer {
     /* background-repeat: no-repeat; */
     background-size: cover;
     margin-top: 130px;
-    background-color: white;
-    color: black;
+    background-color: #1189F7;
+    color: white;
     box-shadow: 0px 5px 8px rgba(0,0,0,0.03);
+    /* border: 1px solid black; */
 }
 
 footer p {
-  text-align: center;
+  /* text-align: center; */
   margin: 20px 0px;
-  color: black;
+  color: white;
 }
 
 footer p a {
